BluetoothDevice can be associated with points

--- a/app/src/main/res/layout/dialog_add_point.xml
+++ b/app/src/main/res/layout/dialog_add_point.xml
@@ -39,8 +39,32 @@
         android:layout_marginStart="10dp"
         android:hint="real y position"
         android:inputType="numberDecimal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bluetoothDeviceSpinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialogXValue" />
+
+    <Spinner
+        android:id="@+id/bluetoothDeviceSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dialogYValue"
+        >
+    </Spinner>
+
+    <TextView
+        android:id="@+id/rssiText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:text="TEST TEXT"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bluetoothDeviceSpinner"
+        />
 </android.support.constraint.ConstraintLayout>
