--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -6,5 +6,6 @@
     android:layout_height="wrap_content"
     android:padding="10dp"
     android:textStyle="italic"
+    android:textColor="#FFF"
     android:fontFamily="sans-serif-medium"
     />
