--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
-        android:onClick="addPointDialog"/>
+        android:onClick="addPointDialog"
+        android:src="@drawable/add"/>
 
 </android.support.constraint.ConstraintLayout>
