--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,13 @@
         android:onClick="addPointDialog"
         android:src="@drawable/add"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/calibrateFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="16dp"
+        android:onClick="calibrate"/>
+
 </android.support.constraint.ConstraintLayout>
