--- a/app/src/main/res/layout/dialog_calibrate.xml
+++ b/app/src/main/res/layout/dialog_calibrate.xml
@@ -27,6 +27,20 @@
     </Spinner>
 
     <TextView
+        android:id="@+id/spinnerVal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/rssiText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dialogDist"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:textStyle="bold"
+        android:textColor="#FFF"
+        />
+
+    <TextView
         android:id="@+id/rssiText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
