--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
-        android:onClick="calibrate"/>
+        android:onClick="calibrate"
+        android:src="@drawable/calibrate"/>
 
 </android.support.constraint.ConstraintLayout>
