Added Help dialog for calibration Fixed variety of warnings

--- a/app/src/main/res/layout/dialog_add_point.xml
+++ b/app/src/main/res/layout/dialog_add_point.xml
@@ -10,7 +10,7 @@
         android:id="@+id/dialogXValue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="real x position"
+        android:hint="@string/real_x_hint"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:hint="real y position"
+        android:hint="@string/real_y_hint"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/bluetoothDeviceSpinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:id="@+id/rssiText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TEST RSSI TEXT"
+        android:text="@string/TEST_RSSI"
         app:layout_constraintBottom_toTopOf="@id/txpowerText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bluetoothDeviceSpinner"
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="TEST TX TEXT"
+        android:text="@string/TEST_TX"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rssiText"
