--- a/app/src/main/res/layout/dialog_calibrate.xml
+++ b/app/src/main/res/layout/dialog_calibrate.xml
@@ -10,7 +10,7 @@
         android:id="@+id/dialogDist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Real distance from beacon"
+        android:hint="@string/real_distance_hint"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:id="@+id/rssiText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TEST RSSI TEXT"
+        android:text="@string/TEST_RSSI"
         app:layout_constraintBottom_toTopOf="@id/txpowerText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calibrateSpinner"
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="TEST TX TEXT"
+        android:text="@string/TEST_TX"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rssiText"
